
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   185: sluys, 18/06/2009
     - Merged intScrOut and printMuch to parameter beVerbose
     - Main input file changed!
     - All warnings and errors are written to stderr now
     
   184: sluys, 18/06/2009
     - Renamed I/O files as well
     
   183: sluys, 17/06/2009
     - Renamed files from mcmc_*.c to SPINspiral_*.c and mcmc.h to SPINspiral.h (sorry!)
     - Chaged example Makefiles accordingly
     - Added doc/Doxyfile as an example Doxygen input file.  Run 'doxygen Doxyfile' in
       trunk/ and your output will be in doc/code_structure
     
   182: sluys, 16/06/2009
     - Removed mcmc_nolal.c
     - Merged include/mcmc_lal.h into include/mcmc.h
     - You'll probably need to change your Makefile, see doc/Makefiles/Makefile
     
   181: sluys, 16/06/2009
     - Removed last MCMC-parameter elements from struct parSet
     - Properly fixed intScrOut output
     
   179: sluys, 16/06/2009
     - Treat MCMC parameters properly in localPar()
     
   178: sluys, 16/06/2009
     - Treat MCMC parameters properly in template routines
     - Added some comments to mcmc_templates() and mcmc_lal(); 
       improves Doxygen's performance
   
   177: sluys, 15/06/2009
     - Transport parameter injectionWF to waveformTemplate() to indicate whether
       an injection (1) or MCMC (0) waveform template is computed.
     
   176: sluys, 15/06/2009
     - Transport struct runPar to waveformTemplate()
     
   174: sluys, 15/06/2009
     - cleaned up adapdation: single parameter set at the beginning of MCMC()
       (mcmc.acceptRateTarget = 0.25) for easier experimentation
     
   173: sluys, 15/06/2009
     - lots of cleaning (especially in mcmc_mcmc.c)
     - all global variables removed
     - keep old setTemperatureLadder() as default for now
   
   172: sluys, 14/06/2009