@@ -38,20 +38,35 @@
 
 //*** MASSES ***//
 
-double massRatio(double m1, double m2)
-// Compute symmetric mass ratio (eta) for given individual masses
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute symmetric mass ratio (eta) for given individual masses
+ */
+double massRatio(double m1, double m2) 
 {
   return (m1*m2)/pow(m1+m2,2.0);
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute chirp mass (mM) for given individual masses
+ */
 double chirpMass(double m1, double m2)
-// Compute chirp mass (mc) for given individual masses
 {
   return pow(m1*m2,0.6) / pow(m1+m2,0.2);
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute individual masses (m1,m2) for given chirp mass (Mc) and symmetric mass ratio (eta)
+ */
 void McEta2masses(double Mc, double eta, double *m1, double *m2)
-// Compute individual masses (m1,m2) for given chirp mass (Mc) and symmetric mass ratio (eta)
 {
   if(eta<=0.25) {
     double Mtot = Mc*exp(-0.6*log(eta));
@@ -66,23 +81,36 @@ void McEta2masses(double Mc, double eta, double *m1, double *m2)
     *m2 = Mtot/2.0 * (1.0 + tvar);
   }
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute chirp mass (Mc) and symmetric mass ratio (eta) for given individual masses (m1,m2)
+ */
 void masses2McEta(double m1, double m2, double *Mc, double *eta)
-// Compute chirp mass (Mc) and symmetric mass ratio (eta) for given individual masses (m1,m2)
 {
   double Mtot = m1+m2;
   *eta = (m1*m2)/(Mtot*Mtot);
   *Mc = Mtot*exp(0.6*log(*eta));
 }
+// ****************************************************************************************************************************************************  
 
 
 
 
 //*** GMT and RIGHT ASCENSION ***
 
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute Greenwich Mean Sideral time from GPS time.
+ * 
+ * Computes the Greenwich Mean Sidereal Time (in radians!) from GPS time (in seconds).
+ * See K.R. Lang (1999), p.80sqq.
+ */
+// ****************************************************************************************************************************************************  
 double GMST(double GPSsec)
-// Derives the `Greenwich Mean Sidereal Time' (in radians!) from GPS time (in seconds).
-// (see K.R.Lang(1999), p.80sqq.)
 {
   double GPS_Jan1st2000midnight    = 630720013.0;
   double leapseconds = 32.0;  // at Jan 1st 2000
@@ -102,20 +130,37 @@ double GMST(double GPSsec)
   result *= 2.0*pi;
   return result;
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute RA from 'longitude' and GMST
+ * 
+ * All quantities are in radians
+ */
 double rightAscension(double longi, double GMST)
-// Derives right ascension (in radians!) from longitude given GMST (radians).
 {
-  double result = fmod(longi + GMST + mtpi,tpi);  //Bring it between 0 and 2pi
-  return result;
+  return fmod(longi + GMST + mtpi,tpi);  //Bring it between 0 and 2pi
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute 'longitude' from RA and GMST
+ * 
+ * Computes the 'longitude' from the right ascension and GMST.
+ * All quantities are in radians.
+ * In fact, 'longitude' is something like the Greenwich hour angle of the corresponding RA.
+ */
 double longitude(double rightAscension, double GMST)
-// Derives longitude from right ascension (radians), given GMST (radians).  Actually this is something like the Greenwich hour angle of the corresponding RA
 {
-  double result = fmod(rightAscension - GMST + mtpi,tpi);
-  return result;
+  return fmod(rightAscension - GMST + mtpi,tpi);
 }
+// ****************************************************************************************************************************************************  
 
 
 
@@ -124,38 +169,71 @@ double longitude(double rightAscension, double GMST)
 
 //*** VECTORS ***
 
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute the dot product of two vectors
+ */
 double dotProduct(double vec1[3], double vec2[3])
-// Dot product of two vectors
 {
   return vec1[0]*vec2[0] + vec1[1]*vec2[1] + vec1[2]*vec2[2];
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Multiply a vector by a factor (scalar): vec2 = fac*vec1
+ */
 void facVec(double vec1[3], double fac, double vec2[3])
-// Multiply a vector by a factor (scalar): vec2 = fac*vec1
 {
   vec2[0] = fac*vec1[0];
   vec2[1] = fac*vec1[1];
   vec2[2] = fac*vec1[2];
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Add two vectors result = vec1 + vec2
+ */
 void addVec(double vec1[3], double vec2[3], double result[3])
-// Add two vectors result = vec1 + vec2
 {
   result[0] = vec1[0] + vec2[0];
   result[1] = vec1[1] + vec2[1];
   result[2] = vec1[2] + vec2[2];
 }
+// ****************************************************************************************************************************************************  
 
 
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Normalise a vector:  nvec = vec / |vec|
+ */
 void normalise(double vec[3])
-/*   vec  :=  vec / |vec|   */
 {
   double length = sqrt(vec[0]*vec[0] + vec[1]*vec[1] + vec[2]*vec[2]);
   vec[0] /= length;
   vec[1] /= length;
   vec[2] /= length;
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute the cross product of two vectors
+ */
 void crossProduct(double vec1[3], double vec2[3], double result[3])
 /* cross product (cartesian p., outer p.) of two vectors: */
 /*    -  x*y is orthogonal to x and y.                    */
@@ -167,11 +245,20 @@ void crossProduct(double vec1[3], double vec2[3], double result[3])
   result[1] = vec1[2]*vec2[0] - vec1[0]*vec2[2];
   result[2] = vec1[0]*vec2[1] - vec1[1]*vec2[0];
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Rotate the vextor x about angle around the normal vector axis
+ * 
+ * Rotates vector x clockwise around axis (looking along axis while it is pointing towards you).
+ * axis must be a UNIT VECTOR
+ */
 void rotate(double x[3], double angle, double axis[3])
-/* rotates vector x clockwise around `axis'               */
-/* (looking along axis while it is pointing towards you). */
-/*   !!  `axis' must be a UNIT VECTOR  !!                 */
 {
   int i, j;
   double cosa = cos(-angle);
@@ -192,20 +279,34 @@ void rotate(double x[3], double angle, double axis[3])
       result[i] += R[i][j]*x[j];
   for (i=0; i<3; ++i) x[i] = result[i];
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Determine whether the vectors x, y and z constitute a right-handed system
+ * 
+ * Determines whether vectors x,y & z constitute a right-handed system by checking the sign of the triple product or det(x,y,z).
+ */
 int rightHanded(double x[3], double y[3], double z[3])
-/* Determines whether vectors x,y & z constitute a right-handed system */
-/* by checking the sign of the triple product or det(x,y,z).           */
 {
-  double spatprodukt =   x[0]*y[1]*z[2] + y[0]*z[1]*x[2] + z[0]*x[1]*y[2]
-                       - z[0]*y[1]*x[2] - x[0]*z[1]*y[2] - y[0]*x[1]*z[2];
-  int result = (spatprodukt >= 0.0) ? 1 : 0;
-  return result;
+  double tripleProduct = x[0]*y[1]*z[2] + y[0]*z[1]*x[2] + z[0]*x[1]*y[2] - z[0]*y[1]*x[2] - x[0]*z[1]*y[2] - y[0]*x[1]*z[2];
+  return (tripleProduct >= 0.0) ? 1 : 0;
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Determines the orthogonal projection of vector x onto the span of the two ORTHONORMAL vectors vec1 and vec2.
+ */
 void orthoProject(double x[3], double vec1[3], double vec2[3])
-/* Determines the orthogonal projection of vector x onto the span of */
-/* the two ORTHONORMAL (!) vectors vec1 and vec2.                    */
 {
   double sprod1 = x[0]*vec1[0] + x[1]*vec1[1] + x[2]*vec1[2];
   double sprod2 = x[0]*vec2[0] + x[1]*vec2[1] + x[2]*vec2[2];
@@ -213,43 +314,72 @@ void orthoProject(double x[3], double vec1[3], double vec2[3])
   x[1] = sprod1*vec1[1] + sprod2*vec2[1];
   x[2] = sprod1*vec1[2] + sprod2*vec2[2];
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Determines the angle between vectors x and y.
+ */
 double angle(double x[3], double y[3])
-/* Determines the angle between vectors x & y. */
 {
   double sprod = x[0]*y[0] + x[1]*y[1] + x[2]*y[2];
   double absx  = sqrt(x[0]*x[0] + x[1]*x[1] + x[2]*x[2]);
   double absy  = sqrt(y[0]*y[0] + y[1]*y[1] + y[2]*y[2]);
   return acos(sprod/(absx*absy));
 }
+// ****************************************************************************************************************************************************  
 
+
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Convert geographical spherical coordinates to a Cartesian normal vector
+ * 
+ * Turns geographical coordinates (latitude & longitude) into a vector - 
+ * Result is a unit (!) vector referring to the (right-handed) coordinate
+ * system spanned by the three vectors pointing from geocenter to:       
+ *   x) intersection of greenwich meridian and equator                   
+ *   y) intersection of 90 deg. East meridian and equator                
+ *   z) north pole                                                       
+ */
+// ****************************************************************************************************************************************************  
 void coord2vec(double sinlati, double longi, double x[3])
-/* Turns geographical coordinates (latitude & longitude) into a vector -     */
-/* Result is a unit (!) vector referring to the (right-handed) coordinate    */
-/* system spanned by the three vectors pointing from geocenter to:           */
-/*   x) intersection of greenwich meridian and equator                       */
-/*   y) intersection of 90 deg. East meridian and equator                    */
-/*   z) north pole                                                           */
 {
   double coslati = sqrt(1.0-sinlati*sinlati);
   x[0] = cos(longi) * coslati;  /* `Greenwich'  */
   x[1] = sin(longi) * coslati;  /* `Ganges'     */
   x[2] = sinlati;               /* `North Pole' */
 }
+// ****************************************************************************************************************************************************  
 
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Compute geographical spherical coordinates from a Cartesian normal vector
+ *
+ * Inverse of coord2vec() (see there for more details)
+ */
+// ****************************************************************************************************************************************************  
 void vec2coord(double x[3], double *sinlati, double *longi)
-/* Derive geographical coordinates from a vector (see also previous function). */
 {
   double greenwich[3] = {1.0, 0.0, 0.0};
   double ganges[3]    = {0.0, 1.0, 0.0};
   double northpole[3] = {0.0, 0.0, 1.0};
   double dummy[3]     = {x[0], x[1], x[2]};
+  
   *sinlati = sin(0.5*pi - angle(northpole, x));
   orthoProject(dummy, greenwich, ganges);
   *longi = angle(greenwich, dummy);
-  if (rightHanded(greenwich,northpole,dummy))
-    *longi *= -1.0;
+  if(rightHanded(greenwich,northpole,dummy)) *longi *= -1.0;
 }
+// ****************************************************************************************************************************************************  
 
 
 
@@ -257,13 +387,26 @@ void vec2coord(double x[3], double *sinlati, double *longi)
 
 
 
+// *** OTHER ***
+
+
+
+// ****************************************************************************************************************************************************  
+/**
+ * \brief Grab a random seed from the system clock
+ * 
+ * If seed==0, set (randomise) seed using the system clock (hence a random (random seed) :-)
+ */
+// ****************************************************************************************************************************************************  
 void setSeed(int *seed)
-//If seed==0, set (randomise) it using the system clock
 {
   struct timeval time;
   struct timezone tz;
-  gettimeofday(&time, &tz);
-  if(*seed==0) *seed = time.tv_usec;
+  if(*seed==0) {
+    gettimeofday(&time, &tz);
+    *seed = time.tv_usec;
+  }
 }
+// ****************************************************************************************************************************************************  
 
 
